--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="headline_text">18sp</dimen>
     <dimen name="date_text">10sp</dimen>
     <dimen name="list_item_padding">5dp</dimen>
+    <dimen name="contributors_text">15sp</dimen>
+    <dimen name="contributors_padding">5dp</dimen>
 </resources>
