--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,30 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/list_item_padding" >
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="@dimen/list_item_padding">
 
-    <TextView
-        android:id="@+id/headline"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="@dimen/headline_text"
-        android:textStyle="bold"/>
+        android:layout_gravity="center">
 
+        <TextView
+            android:id="@+id/route"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center_vertical"
+            android:padding="15dp"
+            android:textColor="#02ab40"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            tools:text="Bus" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/publishDate"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/date_text"/>
+        android:gravity="right"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/contributors"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/contributors_text"
-        android:padding = "@dimen/contributors_padding"/>
+        <TextView
+            android:id="@+id/eta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            tools:text="ETA" />
 
+        <TextView
+            android:id="@+id/presentableDistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:text="Distance" />
+
+        <TextView
+            android:id="@+id/destination"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/contributors_text"
+            tools:text="Destination" />
+
+
+        <TextView
+            android:id="@+id/progressStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/contributors_text"
+            tools:text="Progress Status" />
+
+
+    </LinearLayout>
 </LinearLayout>
